--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,19 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "numpy>=2.2.2",
+    "pandas>=2.2.3",
+    "polars>=1.21.0",
+    "pytest>=8.3.4",
+]
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/leetcode"]
+
+[tool.pytest.ini_options]
+pythonpath = ["src"]
