--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/leetcode"]
+packages = ["src/python/"]
 
 [tool.pytest.ini_options]
 pythonpath = ["src"]
