--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,24 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/python/"]
+packages = ["src/python"]
 
 [tool.pytest.ini_options]
-pythonpath = ["src"]
+pythonpath = ["src/python"]
+
+[tool.ruff.lint]
+select = [
+    # pycodestyle
+    "E",
+    # Pyflakes
+    "F",
+    "RET",
+    # pyupgrade
+    "UP",
+    # flake8-bugbear
+    "B",
+    # flake8-simplify
+    "SIM",
+    # isort
+    "I",
+]
